[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/gui/cost_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_s.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_xs.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/style_box_flat_scalable.gd" type="Script" id=5]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_panel_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/gui/radial_menu/game_radial_menu_label.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.533333 )
border_color = Color( 0, 0, 0, 0 )
corner_detail = 1
shadow_color = Color( 0, 0, 0, 0 )
script = ExtResource( 5 )

[node name="GameRadialMenuLabel" type="Node2D"]
script = ExtResource( 7 )

[node name="ScaffolderPanelContainer" parent="." instance=ExtResource( 6 )]
mouse_filter = 2
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
style = 5
is_unique = true
content_margin_left_override = 4
content_margin_top_override = 4
content_margin_right_override = 4
content_margin_bottom_override = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScaffolderPanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = 70.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Description" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 3 )
font_size = "S"

[node name="CostLabel" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 23.0
margin_right = 20.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DisablementExplanation" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 20.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 4 )
font_size = "Xs"
